<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_himti"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_himti" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_data"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/tv_data_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edt_nama"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/tv_data_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edt_email"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/tv_data_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edt_password"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:background="@drawable/shape_button"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp" />

</LinearLayout>