<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_himti"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_himti" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_daftar"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/edt_nama_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_nama"
        android:fontFamily="@font/poppins"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:padding="13dp"
        android:background="@drawable/costume_input" />

    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_email"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:padding="13dp"
        android:background="@drawable/costume_input" />

    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:padding="13dp"
        android:background="@drawable/costume_input" />

    <TextView
        android:id="@+id/tv_punya_akun_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_punya_akun"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="end" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:background="@drawable/shape_button"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp" />

</LinearLayout>