<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterSuccessActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo_registrasi_sukses"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_success" />

    <TextView
        android:id="@+id/tv_register_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_success"
        android:fontFamily="@font/poppins"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/btn_login_register_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:background="@drawable/shape_button"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp" />

</LinearLayout>